fixed gradient bg issues not covering the entire bg and repeating

--- a/css/attributes/attributes.css
+++ b/css/attributes/attributes.css
@@ -66,3 +66,19 @@
 [size="lg"]{
     font-size: 2rem;
 }
+
+/* Layout */
+[stack]{
+    display: flex;
+    flex-direction: column;
+}
+
+[row]{
+    display: flex;
+}
+
+[grid="3 by 3"]{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
