--- a/css/flex/flex.css
+++ b/css/flex/flex.css
@@ -1,6 +1,6 @@
 @import url('mobile.css');
 
-.flex,.fl {
+.flex,.fl, [flex] {
     display: flex;
 }
 
@@ -224,20 +224,20 @@
     justify-self: stretch;
 }
 
-.fw-rev {
+.fw-rev, [wrap="wrap-reverse"] {
     flex-wrap: wrap-reverse;
 }
 
 .fw-nw,
 .fw-nw,
 .flex-wrap-nowrap,
-.flex-wrap-nowrap
+[wrap="no-wrap"]
 {
     flex-wrap: nowrap;
 }
 
 .fw-wrap,
-.fw-wrap
+[wrap="wrap"]
 {
     flex-wrap: wrap;
 }
@@ -247,125 +247,85 @@
     gap: 10px;
 }
 
-.gap-1 {
+.gap-1, [gap="1"] {
     gap: 1vw;
 }
 
-.gap-2 {
+.gap-2, [gap="2"] {
     gap: 2vw;
 }
 
-.gap-3 {
+.gap-3, [gap="3"] {
     gap: 3vw;
 }
 
-.gap-4 {
+.gap-4, [gap="4"] {
     gap: 4vw;
 }
 
-.gap-5 {
+.gap-5, [gap="5"] {
     gap: 5vw;
 }
 
-.gap-6 {
+.gap-6, [gap="6"] {
     gap: 6vw;
 }
 
-.gap-7 {
+.gap-7, [gap="7"] {
     gap: 7vw;
 }
 
-.gap-8 {
+.gap-8, [gap="8"] {
     gap: 8vw;
 }
 
-.gap-9 {
+.gap-9, [gap="9"] {
     gap: 9vw;
 }
 
-.gap-10 {
+.gap-10, [gap="10"] {
     gap: 10vw;
 }
 
 /*  ORDER */
 
-.order-1 {
+.order-1, [order="1"] {
     order: 1;
 }
 
-.order-1 {
-    order: 1;
-}
-
-.order-2 {
+.order-2, [order="2"] {
     order: 2;
 }
 
-.order-2 {
-    order: 2;
-}
-
-.order-3 {
+.order-3, [order="3"] {
     order: 3;
 }
 
-.order-3 {
-    order: 3;
-}
-
-.order-4 {
+.order-4, [order="4"] {
     order: 4;
 }
 
-.order-4 {
-    order: 4;
-}
-
-.order-5 {
+.order-5, [order="5"] {
     order: 5;
 }
 
-.order-5 {
-    order: 5;
-}
-
-.order-6 {
+.order-6, [order="6"] {
     order: 6;
 }
 
-.order-6 {
-    order: 6;
-}
-
-.order-7 {
+.order-7, [order="7"] {
     order: 7;
 }
 
-.order-7 {
-    order: 7;
-}
-
-.order-8 {
+.order-8, [order="8"] {
     order: 8;
 }
 
-.order-8 {
-    order: 8;
-}
-
-.order-9 {
+.order-9, [order="9"] {
     order: 9;
 }
 
-.order-9 {
-    order: 9;
-}
-
-.order-10 {
-    order: 10;
-}
-
-.order-10 {
+.order-10, [order="10"] {
     order: 10;
 }
 
@@ -397,11 +357,11 @@
 
 /* DIRECTION */
 
-.row {
+.row, [dir="row"] {
     flex-direction: row;
 }
 
-.row-rev {
+.row-rev, [dir="row-rev"] {
     flex-direction: row-reverse;
 }
 
